--- a/thomas_knn.Rmd
+++ b/thomas_knn.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 k-NN
-======
+------
 Yaldo and Shamir (2017) wrote a paper titled 'Computational Estimation of Football Player Wages', evaluating the best machine learning method for predicting football player wages. They used data and variables that are quite similar to the ones we have available, and therefore we took a look at the methods they used. The method that performs the best throughout is k-Nearest Neighbor (k-NN), which predicts based on 'neighbors' that are very similar to it. Therefore, we decided to attempt to run this machine learning method. 
 
 ### Load Packages
@@ -48,6 +48,7 @@ y_tst_boston = test_football$wage_eur
 ```
 
 ### Try out some predictions
+We tried out some predictions using various amounts of k, or neighbors. The results are given below:
 ```{r}
 pred_001 = knn.reg(train = X_trn_boston, test = X_tst_boston, y = y_trn_boston, k = 1)
 pred_005 = knn.reg(train = X_trn_boston, test = X_tst_boston, y = y_trn_boston, k = 5)
@@ -57,7 +58,7 @@ pred_100 = knn.reg(train = X_trn_boston, test = X_tst_boston, y = y_trn_boston, 
 pred_250 = knn.reg(train = X_trn_boston, test = X_tst_boston, y = y_trn_boston, k = 250)
 ```
 
-### Define RMSE function
+### Define (R)MSE function
 ```{r}
 rmse = function(actual, predicted) {
   sqrt(mean((actual - predicted) ^ 2))
@@ -84,7 +85,7 @@ k = c(1, 5, 10, 25, 50, 250)
 ```
 
 ### Get RMSE's
-With the code below we evaluated the RMSEs with the different values of K we tried before. 
+With the code below we evaluated the (R)MSEs with the different values of K we tried before. 
 ```{r}
 # get requested test RMSEs
 knn_tst_rmse = sapply(k, make_knn_pred, 
@@ -115,33 +116,31 @@ knitr::kable(knn_results, escape = FALSE, booktabs = TRUE)
 ### Looping over Seeds
 What the next chunk does is repeatedly run k-nearest neighbor, using a random seed from between 1-2500. In total we ran k-NN 150 times, to find out what the most commonly chosen number of neighbors is. Please note that this does take a while, depending on your computational power. 
 ```{r}
-best_k_list <- matrix(NA, nrow=2, ncol=1000)
+#best_k_list <- matrix(NA, nrow=2, ncol=1000)
 
 # define values of k to evaluate
-k = 1:25
+#k = 1:25
 
-column_indicator = 1
+#column_indicator = 1
 
-set.seed(1)
-for (seed_value in sample(1:2500,size=150)){
-  set.seed(seed_value)
-  train_ind <- sample(1:nrow(DT), 0.8*nrow(DT))
+#set.seed(1)
+#for (seed_value in sample(1:2500,size=150)){
+ # set.seed(seed_value)
+  #train_ind <- sample(1:nrow(DT), 0.8*nrow(DT))
   
-  train_football <- DT[train_ind,]
-  test_football <- DT[-train_ind,]
+  #train_football <- DT[train_ind,]
+  #test_football <- DT[-train_ind,]
   
-  knn_tst_rmse = sapply(k, make_knn_pred, 
-                      training = train_football, 
-                      predicting = test_football)
+  #knn_tst_rmse = sapply(k, make_knn_pred, training = train_football, predicting = test_football)
 
 # determine "best" k
-  best_k = k[which.min(knn_tst_rmse)]
-  best_k_list[1,column_indicator] = best_k
-  best_k_list[2,column_indicator] = seed_value
-  column_indicator = column_indicator + 1
+  #best_k = k[which.min(knn_tst_rmse)]
+  #best_k_list[1,column_indicator] = best_k
+  #best_k_list[2,column_indicator] = seed_value
+  #column_indicator = column_indicator + 1
   
-print(round(100*(column_indicator / 150.0),2))
-}
+#print(round(100*(column_indicator / 150.0),2))
+#}
 ```
 ### Histogram
 The following histogram shows the amount of neighbors most commonly chosen. Each seed makes a different 80/20 split, and therefore the training data is different for each seed. This results in different amounts of nearest neighbors, and shows that the most chosen number of neighbors is 4. 
