--- a/thomas_knn.Rmd
+++ b/thomas_knn.Rmd
@@ -115,7 +115,7 @@ knitr::kable(knn_results, escape = FALSE, booktabs = TRUE)
 
 ### Looping over Seeds
 What the next chunk does is repeatedly run k-nearest neighbor, using a random seed from between 1-2500. In total we ran k-NN 150 times, to find out what the most commonly chosen number of neighbors is. Please note that this does take a while, depending on your computational power. 
-```{r}
+```{r FALSE}
 #best_k_list <- matrix(NA, nrow=2, ncol=1000)
 
 # define values of k to evaluate
@@ -144,13 +144,14 @@ What the next chunk does is repeatedly run k-nearest neighbor, using a random se
 ```
 ### Histogram
 The following histogram shows the amount of neighbors most commonly chosen. Each seed makes a different 80/20 split, and therefore the training data is different for each seed. This results in different amounts of nearest neighbors, and shows that the most chosen number of neighbors is 4. 
-```{r}
+![alt text](https://drive.google.com/file/d/1K10IqZscQME9IqlFjppqvC4YOMcMDBu_/view?usp=sharing)
+```{r FALSE}
 hist(best_k_list[1,], breaks=1:25)
 summary(best_k_list[1,])
 ##k=4
 ```
 We then ran a regression using the complete training data, in order to train the data with as many observations as possible. We used a seed that had given as optimal number of neighbors k=4. We then predicted the wages using the test dataset, and submitted the result to kaggle.
-```{r}
+```{r FALSE}
 set.seed(471)
 pred_4 = FNN::knn.reg(train = DT[, -c("player_ID","wage_eur")], 
                       test = test_submission[, -c("player_ID")], 
